--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ethersproject/abi": "^5.7.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "bignumber.js": "^9.1.1",
+    "daisyui": "^2.46.0",
+    "ethers": "^5.7.2",
+    "next": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
+    "web3": "1.7.4"
   }
 }
